fixed grid spacing

--- a/client/src/app/about/mission/page.module.css
+++ b/client/src/app/about/mission/page.module.css
@@ -1,7 +1,6 @@
 .missionContainer {
   background-color: var(--primary-green);
   color: white;
-  height: 75vh;
 }
 
 .missionStatement {
@@ -10,11 +9,12 @@
 
 .missionImage {
   width: 100%;
-  height: 75vh;
+  height: 100%;
   object-fit: cover;
 }
 
 .valuePaper {
-  padding: 2rem;
+  padding: 1rem;
   color: var(--primary-green);
+  font-size: 12px;
 }
